--- a/package.json
+++ b/package.json
@@ -27,9 +27,11 @@
     "@types/bcryptjs": "^2.4.2",
     "@types/express": "^4.17.11",
     "@types/express-jwt": "^6.0.0",
+    "@types/jest": "^26.0.20",
     "@types/jsonwebtoken": "^8.5.0",
     "@types/node": "^14.14.22",
     "@types/rc": "^1.1.0",
+    "@types/supertest": "^2.0.10",
     "@types/uuid": "^8.3.0",
     "@typescript-eslint/eslint-plugin": "^4.14.0",
     "eslint": "^7.18.0",
@@ -50,5 +52,11 @@
     "coveragePathIgnorePatterns": [
       "/node_modules/"
     ]
+  },
+  "wallaby": {
+    "autoDetect": true,
+    "testFramework": {
+      "configFile": "./jest.config.js"
+    }
   }
 }
