--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
     "bcryptjs": "^2.4.3",
     "express": "^4.17.1",
     "express-jwt": "^6.0.0",
+    "inversify": "^5.0.5",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.11.13",
     "rc": "^1.2.8",
+    "reflect-metadata": "^0.1.13",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
