--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "jest",
     "start": "ts-node index.ts",
     "build": "tsc --project ./",
-    "start:prod": "npm run build && node ./build/index.js",
+    "start:prod": "node ./build/index.js",
     "lint": "eslint 'src/**/*.{js,ts}'",
     "lint:fix": "eslint 'src/**/*.{js,ts}' --fix"
   },
